sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:10: error: illegal start of simple expression
              }}       
              ^AlgBubbleSort1:10: error: 'while' expected but '}' found.
              }}       
               ^